# ChangeLog for app-emulation/libvirt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.185 2012/06/13 20:02:03 cardoe Exp $

  13 Jun 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.12.ebuild:
  Fix issue where we tried to set permissions on directories that don't exist.
  bug #420221

  10 Jun 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.12.ebuild:
  Fix up libnl depend when both slots are installed. Add kernel param checks
  for all the various components of LXC and the virt-network USE flag.

  04 Jun 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.12.ebuild:
  Add the qemu user to the kvm group so it can use KVM.

*libvirt-0.9.12 (04 Jun 2012)

  04 Jun 2012; Doug Goldstein <cardoe@gentoo.org> +libvirt-0.9.12.ebuild:
  Version bump. Added support for dropping privileges when USE=caps.

  04 Jun 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.11.3.ebuild:
  add missing depend on sys-power/pm-utils and remove no long necessary
  net-misc/bridge-utils.

  31 May 2012; Zac Medico <zmedico@gentoo.org> libvirt-0.9.10-r4.ebuild,
  libvirt-0.9.11.3.ebuild, libvirt-0.9.8.ebuild, libvirt-9999.ebuild:
  tweak inherits so repoman can parse them

  28 May 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.11.ebuild:
  Remove older version

  21 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libvirt-0.9.11.3.ebuild:
  x86 stable wrt bug #415265

  09 May 2012; Agostino Sarubbo <ago@gentoo.org> libvirt-0.9.11.3.ebuild:
  Stable for amd64, wrt bug #415265

  09 May 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.6.ebuild:
  Remove older version

  07 May 2012; Patrick Lauer <patrick@gentoo.org> libvirt-0.9.10-r4.ebuild,
  libvirt-0.9.11.3.ebuild, libvirt-0.9.11.ebuild, libvirt-0.9.6.ebuild,
  libvirt-0.9.8.ebuild, libvirt-9999.ebuild:
  Adding libgcrypt dep #410313

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> libvirt-0.9.6.ebuild,