@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.185 2012/06/13 20:02:03 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.186 2012/06/14 05:19:56 cardoe Exp $
+
+  13 Jun 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.12.ebuild,
+  libvirt-9999.ebuild:
+  Clean up the 9999 (live) ebuild. Add support for using numad in the live
+  ebuild.
 
   13 Jun 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.12.ebuild:
   Fix issue where we tried to set permissions on directories that don't exist.
